// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form > renders card layout with fields 1`] = `
<div>
  <form
    class="blong-form"
    id="_r_0_"
    novalidate=""
  >
    <div
      class="grid col align-self-start max-w-screen"
    >
      <div
        class="blong-deck col-12 xl:col-6"
      >
        <div
          class="p-card p-component w-full"
          id="card-edit"
        >
          <div
            class="p-card-body"
          >
            <div
              class="p-card-title"
            >
              <span
                class="blong-card__label"
              >
                <span>
                  User
                </span>
              </span>
            </div>
            <div
              class="p-card-content"
            >
              <div
                class="blong-card__body"
              >
                <div
                  class="field grid"
                >
                  <label
                    class="col-12 md:col-4"
                    for="userName"
                  >
                    <span>
                      User Name
                    </span>
                  </label>
                  <div
                    class="flex align-items-center relative col-12 md:col-8"
                  >
                    <span
                      class="blong-input-wrapper w-full"
                    >
                      <input
                        class="p-inputtext p-component blong-input w-full "
                        id="userName"
                        name="userName"
                        value=""
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="field grid"
                >
                  <label
                    class="col-12 md:col-4"
                    for="emailAddress"
                  >
                    <span>
                      Email Address
                    </span>
                  </label>
                  <div
                    class="flex align-items-center relative col-12 md:col-8"
                  >
                    <span
                      class="blong-input-wrapper w-full"
                    >
                      <input
                        class="p-inputtext p-component blong-input w-full "
                        id="emailAddress"
                        name="emailAddress"
                        value=""
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="field grid mb-0"
                >
                  <label
                    class="col-12 md:col-4"
                    for="phoneNumber"
                  >
                    <span>
                      Phone
                    </span>
                  </label>
                  <div
                    class="flex align-items-center relative col-12 md:col-8"
                  >
                    <span
                      class="blong-input-wrapper w-full"
                    >
                      <input
                        class="p-inputtext p-component blong-input w-full "
                        id="phoneNumber"
                        name="phoneNumber"
                        value=""
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form > renders loading skeleton 1`] = `
<div>
  <form
    class="blong-form"
    id="_r_2_"
    novalidate=""
  >
    <div
      class="grid col align-self-start max-w-screen"
    >
      <div
        class="blong-deck col-12 xl:col-6"
      >
        <div
          class="p-card p-component blong-card--loading w-full"
          id="card-edit"
        >
          <div
            class="p-card-body"
          >
            <div
              class="p-card-title"
            >
              <span
                class="blong-card__label"
              >
                <span>
                  User
                </span>
              </span>
            </div>
            <div
              class="p-card-content"
            >
              <div
                class="blong-card__body"
              >
                <div
                  class="field grid"
                >
                  <label
                    class="col-12 md:col-4"
                  >
                    <span>
                      User Name
                    </span>
                  </label>
                  <div
                    class="flex align-items-center col-12 md:col-8"
                  >
                    <div
                      class="p-skeleton p-component p-inputtext w-full"
                      style="width: 100%; height: 1rem;"
                    />
                  </div>
                </div>
                <div
                  class="field grid"
                >
                  <label
                    class="col-12 md:col-4"
                  >
                    <span>
                      Email Address
                    </span>
                  </label>
                  <div
                    class="flex align-items-center col-12 md:col-8"
                  >
                    <div
                      class="p-skeleton p-component p-inputtext w-full"
                      style="width: 100%; height: 1rem;"
                    />
                  </div>
                </div>
                <div
                  class="field grid mb-0"
                >
                  <label
                    class="col-12 md:col-4"
                  >
                    <span>
                      Phone
                    </span>
                  </label>
                  <div
                    class="flex align-items-center col-12 md:col-8"
                  >
                    <div
                      class="p-skeleton p-component p-inputtext w-full"
                      style="width: 100%; height: 1rem;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form > renders multiple card groups 1`] = `
<div>
  <form
    class="blong-form"
    id="_r_3_"
    novalidate=""
  >
    <div
      class="grid col align-self-start max-w-screen"
    >
      <div
        class="blong-deck col-12 xl:col-6"
      >
        <div
          class="p-card p-component w-full"
          id="card-personal"
        >
          <div
            class="p-card-body"
          >
            <div
              class="p-card-title"
            >
              <span
                class="blong-card__label"
              >
                <span>
                  Personal Info
                </span>
              </span>
            </div>
            <div
              class="p-card-content"
            >
              <div
                class="blong-card__body"
              >
                <div
                  class="field grid mb-0"
                >
                  <label
                    class="col-12 md:col-4"
                    for="userName"
                  >
                    <span>
                      User Name
                    </span>
                  </label>
                  <div
                    class="flex align-items-center relative col-12 md:col-8"
                  >
                    <span
                      class="blong-input-wrapper w-full"
                    >
                      <input
                        class="p-inputtext p-component blong-input w-full "
                        id="userName"
                        name="userName"
                        value=""
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="blong-deck col-12 xl:col-6"
      >
        <div
          class="p-card p-component w-full"
          id="card-contact"
        >
          <div
            class="p-card-body"
          >
            <div
              class="p-card-title"
            >
              <span
                class="blong-card__label"
              >
                <span>
                  Contact
                </span>
              </span>
            </div>
            <div
              class="p-card-content"
            >
              <div
                class="blong-card__body"
              >
                <div
                  class="field grid"
                >
                  <label
                    class="col-12 md:col-4"
                    for="emailAddress"
                  >
                    <span>
                      Email Address
                    </span>
                  </label>
                  <div
                    class="flex align-items-center relative col-12 md:col-8"
                  >
                    <span
                      class="blong-input-wrapper w-full"
                    >
                      <input
                        class="p-inputtext p-component blong-input w-full "
                        id="emailAddress"
                        name="emailAddress"
                        value=""
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="field grid mb-0"
                >
                  <label
                    class="col-12 md:col-4"
                    for="phoneNumber"
                  >
                    <span>
                      Phone
                    </span>
                  </label>
                  <div
                    class="flex align-items-center relative col-12 md:col-8"
                  >
                    <span
                      class="blong-input-wrapper w-full"
                    >
                      <input
                        class="p-inputtext p-component blong-input w-full "
                        id="phoneNumber"
                        name="phoneNumber"
                        value=""
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form > renders read-only form with values 1`] = `
<div>
  <form
    class="blong-form"
    id="_r_1_"
    novalidate=""
  >
    <div
      class="grid col align-self-start max-w-screen"
    >
      <div
        class="blong-deck col-12 xl:col-6"
      >
        <div
          class="p-card p-component w-full"
          id="card-edit"
        >
          <div
            class="p-card-body"
          >
            <div
              class="p-card-title"
            >
              <span
                class="blong-card__label"
              >
                <span>
                  User
                </span>
              </span>
            </div>
            <div
              class="p-card-content"
            >
              <div
                class="blong-card__body"
              >
                <div
                  class="field grid"
                >
                  <label
                    class="col-12 md:col-4"
                    for="userName"
                  >
                    <span>
                      User Name
                    </span>
                  </label>
                  <div
                    class="flex align-items-center relative col-12 md:col-8"
                  >
                    <span
                      class="blong-input-wrapper w-full"
                    >
                      <input
                        class="p-inputtext p-component p-disabled p-filled blong-input w-full "
                        disabled=""
                        id="userName"
                        name="userName"
                        value="Alice"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="field grid"
                >
                  <label
                    class="col-12 md:col-4"
                    for="emailAddress"
                  >
                    <span>
                      Email Address
                    </span>
                  </label>
                  <div
                    class="flex align-items-center relative col-12 md:col-8"
                  >
                    <span
                      class="blong-input-wrapper w-full"
                    >
                      <input
                        class="p-inputtext p-component p-disabled p-filled blong-input w-full "
                        disabled=""
                        id="emailAddress"
                        name="emailAddress"
                        value="alice@example.com"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="field grid mb-0"
                >
                  <label
                    class="col-12 md:col-4"
                    for="phoneNumber"
                  >
                    <span>
                      Phone
                    </span>
                  </label>
                  <div
                    class="flex align-items-center relative col-12 md:col-8"
                  >
                    <span
                      class="blong-input-wrapper w-full"
                    >
                      <input
                        class="p-inputtext p-component p-disabled p-filled blong-input w-full "
                        disabled=""
                        id="phoneNumber"
                        name="phoneNumber"
                        value="555-1234"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
